--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="lion.jpeg"/>
   </body>
+
+  <body>
+    <!-- Your code here -->
+    <img 
+     src="lion.jpeg"
+     alt = "comedic crow gets wholesome support" 
+     />
+
+     <body>
+     <!-- Your code here -->
+     <img 
+      src="SpongeBob.webp"
+      alt = "comedic crow gets wholesome support" 
+      title="We're here to help you!"
+      />
+
+
+  </body>
+
 </html>
